src/objects/Fuzion_Session__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Fuzion API Settings</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Fuzion Session</label>
</CustomObject>